修改框架结构

--- a/XQEndlessShow/XQEndlessShow/Localizable.strings
+++ b/XQEndlessShow/XQEndlessShow/Localizable.strings
@@ -5,4 +5,9 @@
   Created by HCZH on 17/4/6.
   Copyright © 2017年 hxq. All rights reserved.
 */
-"hczd full name"="福建和诚智达汽车管理服务有限公司";
+"Fujian HCZD automobile management service co., LTD"="福建和诚智达汽车管理服务有限公司";
+"Network link is unusual, please open the mobile network to access the data" = "网络链接异常，请打开移动网络访问数据";
+"Remind" = "提示";
+"Cancel" = "取消";
+"Sure" = "确定";
+"Go Open" = "去开启";
